src/test/ui/issues/issue-8761.stderr
error[E0308]: mismatched types
  --> $DIR/issue-8761.rs:2:9
   |
LL |     A = 1i64,
   |         ^^^^ expected isize, found i64

error[E0308]: mismatched types
  --> $DIR/issue-8761.rs:5:9
   |
LL |     B = 2u8
   |         ^^^ expected isize, found u8

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
